manifests/base/deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: u-the-bomb-com
  namespace: default
  labels:
    app: u-the-bomb-com
spec:
  selector:
    matchLabels:
      app: u-the-bomb-com
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: u-the-bomb-com
      labels:
        app: u-the-bomb-com
    spec:
      containers:
        name: u-the-bomb-com
        image: u-the-bomb-com
        restartPolicy: Always
        ports:
          - containerPort: 3000
            name: http
            protocol: TCP
